fixing iweb layout issues
https://trello.com/c/CE7AKScY/1154-merge-des-homepage-moduls-wingolforg

--- a/app/assets/stylesheets/iweb_layout.css.sass
+++ b/app/assets/stylesheets/iweb_layout.css.sass
@@ -19,7 +19,7 @@ body.iweb-layout
     text-align: center
     border-bottom: solid 1px #666
     margin-bottom: 1px
-    > ul
+    ul.nav
       display: inline-block
       float: none
       font-size: 105%
@@ -53,6 +53,7 @@ body.iweb-layout
     margin-bottom: 20px
 
   .panel-default
+    border-color: white
     .panel-heading
       background-color: white
       border-color: white
@@ -65,6 +66,11 @@ body.iweb-layout
       border-color: white
   .page_footer
     display: none
+
+  .box_toolbar
+    text-align: right
+    .tool
+      vertical-align: middle
 
   #inline-pictures
     margin-bottom: 65px
@@ -82,6 +88,10 @@ body.pages-homepage.iweb-layout
       height: 40px
       background: none
     .panel-title
+      visibility: hidden
+    .box_meta
+      display: none
+    .picture-info
       display: none
 
 // No global page settings button for this compact layout.
